--- a/day10-troubleshooting/scenario3.clab.yml
+++ b/day10-troubleshooting/scenario3.clab.yml
@@ -23,14 +23,14 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 192.168.1.10/24 dev eth1
-        - ip route add default via 192.168.1.1
+        - ip route replace default via 192.168.1.1
 
     server-external:
       kind: linux
       image: alpine:latest
       exec:
         - ip addr add 203.0.113.10/24 dev eth1
-        - ip route add default via 203.0.113.1
+        - ip route replace default via 203.0.113.1
 
   links:
     - endpoints: ["host-internal:eth1", "router-gw:eth1"]
