--- a/day10-troubleshooting/scenario4.clab.yml
+++ b/day10-troubleshooting/scenario4.clab.yml
@@ -26,21 +26,21 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 192.168.1.10/24 dev eth1
-        - ip route add default via 192.168.1.1
+        - ip route replace default via 192.168.1.1
 
     host-dmz:
       kind: linux
       image: alpine:latest
       exec:
         - ip addr add 172.16.0.10/24 dev eth1
-        - ip route add default via 172.16.0.1
+        - ip route replace default via 172.16.0.1
 
     host-external:
       kind: linux
       image: alpine:latest
       exec:
         - ip addr add 203.0.113.10/24 dev eth1
-        - ip route add default via 203.0.113.1
+        - ip route replace default via 203.0.113.1
 
   links:
     - endpoints: ["host-internal:eth1", "router-fw:eth1"]
