--- a/day5-nat/topology.clab.yml
+++ b/day5-nat/topology.clab.yml
@@ -26,7 +26,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 192.168.1.10/24 dev eth1
-        - ip route add default via 192.168.1.1
+        - ip route replace default via 192.168.1.1
 
     # 外部サーバー
     server-external:
@@ -34,7 +34,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 203.0.113.10/24 dev eth1
-        - ip route add default via 203.0.113.1
+        - ip route replace default via 203.0.113.1
 
   links:
     - endpoints: ["host-internal:eth1", "router-gw:eth1"]
