--- a/day6-dhcp-dns/topology.clab.yml
+++ b/day6-dhcp-dns/topology.clab.yml
@@ -54,7 +54,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 192.168.1.50/24 dev eth1
-        - ip route add default via 192.168.1.1
+        - ip route replace default via 192.168.1.1
 
   links:
     - endpoints: ["router-gw:eth1", "switch:eth1"]
