--- a/day7-firewall/exercise.clab.yml
+++ b/day7-firewall/exercise.clab.yml
@@ -34,7 +34,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 192.168.1.10/24 dev eth1
-        - ip route add default via 192.168.1.1
+        - ip route replace default via 192.168.1.1
 
     # DMZ ゾーン（設定済み）
     host-dmz:
@@ -42,7 +42,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 172.16.0.10/24 dev eth1
-        - ip route add default via 172.16.0.1
+        - ip route replace default via 172.16.0.1
 
     # 外部ゾーン（設定済み）
     host-external:
@@ -50,7 +50,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 203.0.113.10/24 dev eth1
-        - ip route add default via 203.0.113.1
+        - ip route replace default via 203.0.113.1
 
   links:
     - endpoints: ["host-internal:eth1", "router-fw:eth1"]
