--- a/day9-vpn/exercise.clab.yml
+++ b/day9-vpn/exercise.clab.yml
@@ -30,7 +30,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 10.1.0.10/24 dev eth1
-        - ip route add default via 10.1.0.1
+        - ip route replace default via 10.1.0.1
 
     # === インターネット（模擬 - 設定済み）===
     router-internet:
@@ -52,7 +52,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 10.2.0.10/24 dev eth1
-        - ip route add default via 10.2.0.1
+        - ip route replace default via 10.2.0.1
 
   links:
     - endpoints: ["host-site-a:eth1", "router-site-a:eth1"]
