--- a/day9-vpn/topology.clab.yml
+++ b/day9-vpn/topology.clab.yml
@@ -29,7 +29,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 10.1.0.10/24 dev eth1
-        - ip route add default via 10.1.0.1
+        - ip route replace default via 10.1.0.1
 
     # === インターネット（模擬）===
     router-internet:
@@ -50,7 +50,7 @@ topology:
       image: alpine:latest
       exec:
         - ip addr add 10.2.0.10/24 dev eth1
-        - ip route add default via 10.2.0.1
+        - ip route replace default via 10.2.0.1
 
   links:
     # Site A 内部
